cilium-cli/connectivity/builder/manifests/echo-ingress-from-other-client-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-ingress-from-other-client-deny
spec:
  description: "Deny other client to contact echo"
  endpointSelector:
    matchLabels:
      kind: echo
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        other: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
